@@ -6,6 +6,7 @@ move resample (bilenear interp. (and add other options)) and rasterize/(lines, p
 
 --- development version
 adjacency is now obsolete
+replacing a logical value in a RasterLayer previously changed the data type to numeric
 rasterOptions now (optionally) saved in a file in the start-up working directory
 
 --- 21-December-2012, version: 2.0-41
